--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,12 @@ body, html {
 
 .center{
     background-color: #f0f0f0;  /* Optional: background color for visibility */
-    margin: 10px 10px 10px 10px;
-    height: 200px;
-    width: 200px;
+    margin: 10px;
+    height: 200px;  /* Adjusted height */
+    width: 200px;   /* Adjusted width */
     border-radius: 10px;
+    padding: 20px; 
+    padding-bottom: 75%; /* Optional: padding for better spacing */
 }
 
 img{
@@ -26,6 +28,7 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 10px;
 }
 
 p{
